# compute_error_example

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo_run_output.txt  compute_shader_macro_expand.rs  rustfmt.toml
src/: main.rs
